Moved getFrustumPtr() method to an abstract base class.
This allows Entity to be used away from the explicit Visualisation class (e.g. if using the class in external OpenGL code).

--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="visualisation\texture\Texture2D.h" />
     <ClInclude Include="visualisation\texture\TextureBuffer.h" />
     <ClInclude Include="visualisation\texture\TextureCubeMap.h" />
+    <ClInclude Include="visualisation\Viewport.h" />
     <ClInclude Include="visualisation\Visualisation.h" />
     <ClInclude Include="visualisation\Scene.h" />
   </ItemGroup>
