--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -163,6 +163,9 @@
     <ClInclude Include="visualisation\ShaderCore.h">
       <Filter>Header Files\Visualisation</Filter>
     </ClInclude>
+    <ClInclude Include="visualisation\Reloadable.h">
+      <Filter>Header Files\Visualisation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="EntityScene.cu">
