--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -162,11 +162,14 @@
     <ClCompile Include="EntityScene.cu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="visualisation\Axis.cpp" />
+    <ClCompile Include="visualisation\BoundingBox.cpp" />
     <ClCompile Include="visualisation\Camera.cpp" />
     <ClCompile Include="visualisation\ComputeShader.cpp" />
     <ClCompile Include="visualisation\Entity.cpp" />
+    <ClCompile Include="visualisation\EntityCore.cpp" />
     <ClCompile Include="visualisation\HUD.cpp" />
     <ClCompile Include="visualisation\Material.cpp" />
+    <ClCompile Include="visualisation\Model.cpp" />
     <ClCompile Include="visualisation\Overlay.cpp" />
     <ClCompile Include="visualisation\ShaderCore.cpp" />
     <ClCompile Include="visualisation\Shaders.cpp" />
@@ -191,12 +194,15 @@
   <ItemGroup>
     <ClInclude Include="EntityScene.h" />
     <ClInclude Include="visualisation\Axis.h" />
+    <ClInclude Include="visualisation\BoundingBox.h" />
     <ClInclude Include="visualisation\Camera.h" />
     <ClInclude Include="visualisation\ComputeShader.h" />
     <ClInclude Include="visualisation\Entity.h" />
+    <ClInclude Include="visualisation\EntityCore.h" />
     <ClInclude Include="visualisation\GLcheck.h" />
     <ClInclude Include="visualisation\HUD.h" />
     <ClInclude Include="visualisation\Material.h" />
+    <ClInclude Include="visualisation\Model.h" />
     <ClInclude Include="visualisation\Overlay.h" />
     <ClInclude Include="visualisation\Reloadable.h" />
     <ClInclude Include="visualisation\ShaderCore.h" />
