--- a/sdl_exp/sdl_exp.vcxproj.filters
+++ b/sdl_exp/sdl_exp.vcxproj.filters
@@ -223,6 +223,9 @@
     <ClInclude Include="visualisation\multipass\BackBuffer.h">
       <Filter>Header Files\Visualisation\MultiPass</Filter>
     </ClInclude>
+    <ClInclude Include="visualisation\multipass\FrameBufferAttachment.h">
+      <Filter>Header Files\Visualisation\MultiPass</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="EntityScene.cu">
