--- a/sdl_exp/sdl_exp.vcxproj
+++ b/sdl_exp/sdl_exp.vcxproj
@@ -161,13 +161,20 @@
   <ItemGroup>
     <ClCompile Include="EntityScene.cu.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TwoPassScene.cpp" />
     <ClCompile Include="visualisation\Axis.cpp" />
+    <ClCompile Include="visualisation\BasicScene.cpp" />
     <ClCompile Include="visualisation\Camera.cpp" />
     <ClCompile Include="visualisation\Entity.cpp" />
     <ClCompile Include="visualisation\HUD.cpp" />
     <ClCompile Include="visualisation\Material.cpp" />
+    <ClCompile Include="visualisation\multipass\BackBuffer.cpp" />
+    <ClCompile Include="visualisation\multipass\FrameBuffer.cpp" />
+    <ClCompile Include="visualisation\multipass\MultiPassScene.cpp" />
+    <ClCompile Include="visualisation\multipass\RenderPass.cpp" />
     <ClCompile Include="visualisation\Overlay.cpp" />
     <ClCompile Include="visualisation\shader\ComputeShader.cpp" />
+    <ClCompile Include="visualisation\shader\GaussianBlur.cpp" />
     <ClCompile Include="visualisation\shader\ShaderCore.cpp" />
     <ClCompile Include="visualisation\shader\Shaders.cpp" />
     <ClCompile Include="visualisation\Skybox.cpp" />
@@ -178,28 +185,36 @@
     <ClCompile Include="visualisation\texture\TextureBuffer.cu.cpp" />
     <ClCompile Include="visualisation\texture\TextureCubeMap.cpp" />
     <ClCompile Include="visualisation\Visualisation.cpp" />
-    <ClCompile Include="visualisation\Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="EntityScene.cu">
       <FileType>Document</FileType>
     </CudaCompile>
-    <None Include="glsl\main.frag" />
-    <None Include="glsl\main.vert" />
     <None Include="visualisation\util\cuda.cuh" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityScene.h" />
+    <ClInclude Include="TwoPassScene.h" />
     <ClInclude Include="visualisation\Axis.h" />
+    <ClInclude Include="visualisation\BasicScene.h" />
     <ClInclude Include="visualisation\Camera.h" />
     <ClInclude Include="visualisation\Entity.h" />
     <ClInclude Include="visualisation\GLcheck.h" />
     <ClInclude Include="visualisation\HUD.h" />
+    <ClInclude Include="visualisation\interface\FBuffer.h" />
     <ClInclude Include="visualisation\interface\Reloadable.h" />
+    <ClInclude Include="visualisation\interface\Renderable.h" />
+    <ClInclude Include="visualisation\interface\Scene.h" />
     <ClInclude Include="visualisation\interface\Viewport.h" />
     <ClInclude Include="visualisation\Material.h" />
+    <ClInclude Include="visualisation\multipass\BackBuffer.h" />
+    <ClInclude Include="visualisation\multipass\FrameBuffer.h" />
+    <ClInclude Include="visualisation\multipass\FrameBufferAttachment.h" />
+    <ClInclude Include="visualisation\multipass\MultiPassScene.h" />
+    <ClInclude Include="visualisation\multipass\RenderPass.h" />
     <ClInclude Include="visualisation\Overlay.h" />
     <ClInclude Include="visualisation\shader\ComputeShader.h" />
+    <ClInclude Include="visualisation\shader\GaussianBlur.h" />
     <ClInclude Include="visualisation\shader\ShaderCore.h" />
     <ClInclude Include="visualisation\shader\Shaders.h" />
     <ClInclude Include="visualisation\Skybox.h" />
@@ -210,7 +225,6 @@
     <ClInclude Include="visualisation\texture\TextureBuffer.h" />
     <ClInclude Include="visualisation\texture\TextureCubeMap.h" />
     <ClInclude Include="visualisation\Visualisation.h" />
-    <ClInclude Include="visualisation\Scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
